CHANGELOG:
9-24-2015 : v1.9.9 released
  - added display name to sip accounts
  - added lock file to prevent running multiple copies
9-12-2015 : v1.9.8 released
  - fixes to register()ing
    - this should fix bug #31
7-9-2015 : v1.9.7 released
  - just minor fixes for linux users
    - if native libraries aren't loaded the app will not exit but the video button will be disabled
    - now includes 32bit linux libraries
    - this should fix bug #29
6-30-2015 : v1.9.6 released
  - fixed support for QOP auth and Record-Route fields (RFC 2543 6.29).
    - flowroute.com is now supported
6-15-2015 : v1.9.5 released
  - fixed handling auth string with spaces in quotes (created custom String.split())
4-7-2015 : v1.9.4 released
  - fixed some memory leaks
3-26-2015 : v1.9.3 released
  - added Online Help button to configure window (see ticket #25)
2-9-2015 : v1.9.3 beta 1 (not released)
  - added support for inbound calls where SDP is not in INVITE but in ACK instead (see RFC 3665 sec 3.6)
    see ticket #24
10-25-2014 : v1.9.2 released
  - removed 'Keep Audio Open' option
    audio is now start()ed only when needed (both output and input)
    this should keep audio synced better (see bug #22)
  - the audio recording has been moved to a seperate thread
9-15-2014 : v1.9.1 released
  - new option : exit when closed
  - new tray icon (Windows 7 theme)
7-8-2014 : v1.9.0 released
  - new codec : G.722 wideband : 16Khz sampling rate @ 14bits/sample (64Kbps)
    - with a different sampling rate I had to rewrite a lot of code to support different sampling rates.
    - everything is now interpolated up to 44.1KHz internally (requires a bit more cpu power)
    - JPL is now ready for more HD codecs
      - although I've looked at some like G.711.1 and doing so would be very difficult
        - do you remember your FFTs from university?
7-5-2014 : v1.8.1 released
  - fixed video codec selection (works better with Asterisk now)