@@ -1,5 +1,5 @@
 Package: javaforce
-Version: 11.2.0
+Version: 11.3.0
 Architecture: @ARCH@
 Maintainer: Peter Quiring <pquiring@jflinux.org>
 Installed-Size: 290
