@@ -5,7 +5,7 @@
   <property name="home" location="../.."/>
   <property name="src" location="src"/>
   <property name="build" location="classes"/>
-  <property name="version" value="1.10b1"/>
+  <property name="version" value="1.10"/>
 
   <import file="../../base.xml"/>
 
